jitfailure-ffc_form_4447805b25727a7ea1273b55e74c7015436d4bc7/error.log
/var/folders/0n/bb4_kwsn3n5c5_7n_mgl2n540000gn/T/tmpu3opsf86/ffc_form_4447805b25727a7ea1273b55e74c7015436d4bc7.cpp:138:18: error: redefinition of 'J_c0'
    const double J_c0 = coordinate_dofs[0] * FE18_C0_D01_Q16[0][0][0] + coordinate_dofs[2] * FE18_C0_D01_Q16[0][0][1];
                 ^
/var/folders/0n/bb4_kwsn3n5c5_7n_mgl2n540000gn/T/tmpu3opsf86/ffc_form_4447805b25727a7ea1273b55e74c7015436d4bc7.cpp:127:18: note: previous definition is here
    const double J_c0 = coordinate_dofs[0] * FE18_C0_D01_Q16[0][0][0] + coordinate_dofs[2] * FE18_C0_D01_Q16[0][0][1];
                 ^
/var/folders/0n/bb4_kwsn3n5c5_7n_mgl2n540000gn/T/tmpu3opsf86/ffc_form_4447805b25727a7ea1273b55e74c7015436d4bc7.cpp:139:18: error: redefinition of 'J_c3'
    const double J_c3 = coordinate_dofs[1] * FE18_C0_D01_Q16[0][0][0] + coordinate_dofs[5] * FE18_C0_D01_Q16[0][0][1];
                 ^
/var/folders/0n/bb4_kwsn3n5c5_7n_mgl2n540000gn/T/tmpu3opsf86/ffc_form_4447805b25727a7ea1273b55e74c7015436d4bc7.cpp:128:18: note: previous definition is here
    const double J_c3 = coordinate_dofs[1] * FE18_C0_D01_Q16[0][0][0] + coordinate_dofs[5] * FE18_C0_D01_Q16[0][0][1];
                 ^
/var/folders/0n/bb4_kwsn3n5c5_7n_mgl2n540000gn/T/tmpu3opsf86/ffc_form_4447805b25727a7ea1273b55e74c7015436d4bc7.cpp:140:18: error: redefinition of 'J_c1'
    const double J_c1 = coordinate_dofs[0] * FE18_C0_D01_Q16[0][0][0] + coordinate_dofs[4] * FE18_C0_D01_Q16[0][0][1];
                 ^
/var/folders/0n/bb4_kwsn3n5c5_7n_mgl2n540000gn/T/tmpu3opsf86/ffc_form_4447805b25727a7ea1273b55e74c7015436d4bc7.cpp:129:18: note: previous definition is here
    const double J_c1 = coordinate_dofs[0] * FE18_C0_D01_Q16[0][0][0] + coordinate_dofs[4] * FE18_C0_D01_Q16[0][0][1];
                 ^
/var/folders/0n/bb4_kwsn3n5c5_7n_mgl2n540000gn/T/tmpu3opsf86/ffc_form_4447805b25727a7ea1273b55e74c7015436d4bc7.cpp:141:18: error: redefinition of 'J_c2'
    const double J_c2 = coordinate_dofs[1] * FE18_C0_D01_Q16[0][0][0] + coordinate_dofs[3] * FE18_C0_D01_Q16[0][0][1];
                 ^
/var/folders/0n/bb4_kwsn3n5c5_7n_mgl2n540000gn/T/tmpu3opsf86/ffc_form_4447805b25727a7ea1273b55e74c7015436d4bc7.cpp:130:18: note: previous definition is here
    const double J_c2 = coordinate_dofs[1] * FE18_C0_D01_Q16[0][0][0] + coordinate_dofs[3] * FE18_C0_D01_Q16[0][0][1];
                 ^
4 errors generated.
